wip : slice first empty chat message, reset form after message sent

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -2,7 +2,7 @@
   <h2>Chat</h2>
   <div class="message-list">
     <div *ngIf="messageList.length > 0">
-      <div class="message-card" *ngFor="let message of messageList">
+      <div class="message-card" *ngFor="let message of messageList | slice : 1">
         <div class="message-header">
           <p class="header-content">
             {{ message.author?.username ?? "Anonymous" }}
