--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,14 +1,20 @@
 <div class="chat-component">
-  <div *ngFor="let message of messageList">
-    <li>
-      {{ message }}
-    </li>
+  <div class="message-list">
+    <div class="message" *ngFor="let message of messageList">
+      <div>
+        {{ message.author.username }}
+      </div>
+      <div>
+        {{ message.body }}
+      </div>
+    </div>
   </div>
 
-  <input
-    [(ngModel)]="newMessage"
-    (keyup)="$event.keyCode == 13 && sendMessage()"
-  />
-  <button (click)="sendMessage()">Send Message</button>
+  <div class="chat-input">
+    <form [formGroup]="form" (submit)="sendMessage()">
+      <input formControlName="messageBody" />
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
 </div>
 <router-outlet></router-outlet>
