--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -4,4 +4,19 @@
   padding: 4rem 2rem;
   margin: auto;
   max-width: 45rem;
+
+  .message-list{
+    padding: 2rem;
+    margin: auto;
+
+    .message{
+      display:flex;
+      flex-direction: column;
+    }
+  }
+
+  .chat-input{
+    margin: auto;
+
+  }
 }
