--- a/src/app/components/comment-list/comment-list.component.html
+++ b/src/app/components/comment-list/comment-list.component.html
@@ -1,20 +1,26 @@
 <div class="comment-list-component">
   <h2 class="list-title">Comments</h2>
   <div class="list">
-    <div *ngIf="comments$ | async as comments; else noComments">
-      <div class="comment-card" *ngFor="let comment of comments">
-        <div class="comment-header">
-          <p class="header-content">{{ comment.author.username }}</p>
-          <p class="header-content">
-            {{ comment.created_at | date : 'medium' }}
-          </p>
-        </div>
-        <p class="comment-text">{{ comment.body }}</p>
+
+    @if(comments$ | async; as comments){
+      <div>
+        @for(comment of comments; track $index){
+          <div class="comment-card">
+            <div class="comment-header">
+              <p class="header-content">{{ comment.author.username }}</p>
+              <p class="header-content">
+                {{ comment.created_at | date : 'medium' }}
+              </p>
+            </div>
+            <p class="comment-text">{{ comment.body }}</p>
+          </div>
+
+        }
       </div>
-    </div>
-    <ng-template #noComments>
+    }
+    @else{
       <p class="no-comment-msg">Be the first to leave a comment!</p>
-    </ng-template>
+    }
   </div>
   <app-new-comment (onNewComment)="getComments()"></app-new-comment>
 
