--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,49 +1,24 @@
 <nav class="navbar-component">
-  <div class="navbar-content">
+  <div class="top-bar">
     <div class="navbar-brand">
       <a routerLink="/">Chatter Angular</a>
     </div>
-    <button
-      [class.collapsed]="isCollapsed"
-      class="navbar-toggler"
-      (click)="collapseMenu()"
-    >
-      <div class="navbar-toggler-icon">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-    </button>
-
-    <div class="nav-links">
-      <a routerLink="/new-post" class="nav-link">New Post</a>
-      <a routerLink="/post-list" class="nav-link">Post List</a>
-      <a routerLink="/images" class="nav-link">Images</a>
-      <ng-container *ngIf="afAuth.currentUser; else loggedOut">
-        <a routerLink="/dashboard" class="nav-link">Dashboard</a>
-      </ng-container>
-
-      <ng-template #loggedOut>
-        <a routerLink="/login" class="nav-link">Log in</a>
-      </ng-template>
-    </div>
   </div>
   <div
-    [class.collapsed]="isCollapsed"
-    (click)="collapseMenu()"
-    class="mobile-menu"
+    class="side-bar"
   >
-    <div class="mobile-links">
-      <a routerLink="/new-post" class="nav-link">New Post</a>
-      <a routerLink="/post-list" class="nav-link">Post List</a>
-      <a routerLink="/images" class="nav-link">Images</a>
-      <ng-container *ngIf="afAuth.currentUser; else loggedOut">
-        <a routerLink="/dashboard" class="nav-link">Dashboard</a>
-      </ng-container>
+    <div class="nav-links">
+      <a routerLink="/new-post" class="nav-link"><mat-icon>add</mat-icon> <span class="sidebar-link-text">New Post</span></a>
+      <a routerLink="/post-list" class="nav-link"><mat-icon>list</mat-icon><span class="sidebar-link-text">Post List</span></a>
 
-      <ng-template #loggedOut>
+      @if(authService.getCurrentUser()){
+        <a routerLink="/dashboard" class="nav-link"><mat-icon>person</mat-icon><span class="sidebar-link-text">Account</span></a>
+      } @else{
         <a routerLink="/login" class="nav-link">Log in</a>
-      </ng-template>
+      }
+
     </div>
   </div>
 </nav>
+<ng-content></ng-content>
+
