--- a/src/app/components/post-card/post-card.component.html
+++ b/src/app/components/post-card/post-card.component.html
@@ -1,8 +1,7 @@
 <div routerLink="/posts/{{post.id}}" class="post-card">
-  <div class="card-content">
-    <img class="image" src="{{ post.image ?? './assets/placeholder.png'}}" alt="" />
-    <h3>{{ post.title }}</h3>
-    <p>{{ (post.body.length>10)? (post.body | slice:0:100)+'...':(post.body) }}</p>
     <p>{{ post.author.username }}</p>
-  </div>
+    <p>{{ post.body }}</p>
+  @if(post.image){
+    <img class="image" src="{{ post.image}}" alt="" />
+  }
 </div>
