--- a/src/app/components/post-card/post-card.component.scss
+++ b/src/app/components/post-card/post-card.component.scss
@@ -1,15 +1,8 @@
 .post-card {
   display: flex;
-  background-color: white;
   flex-direction: column;
   padding: 1rem;
-  border: none;
-  border-radius: 0.5rem;
-
-  &:hover {
-    cursor: pointer;
-    box-shadow: 0 0 5px lightgrey;
-  }
+  border-bottom: 0.1rem solid;
 
   .image {
     height: 5rem;
