--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,19 +1,10 @@
 <div class="post-list-component">
-  <h2 class="list-title">Post List</h2>
-  <div class="search-bar">
-    <input
-      [(ngModel)]="searchTerm"
-      (ngModelChange)="searchBar()"
-      type="text"
-      id="search"
-    />
-  </div>
-  <div class="list">
-    <div class="card-container" *ngFor="let post of posts">
-      <app-post-card
-        [post]="post"
-        routerLink="['/posts', post.id]"
-      ></app-post-card>
-    </div>
-  </div>
+    @for(post of posts(); track $index){
+      <div class="card-container">
+        <app-post-card
+          [post]="post"
+          routerLink="['/posts', post.id]"
+        ></app-post-card>
+      </div>
+    }
 </div>
