--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -4,7 +4,7 @@
 
     <form [formGroup]="signupForm" (ngSubmit)="signup()">
           <div class="form-block">
-            <label for="email">email :</label>
+            <label for="signup-email">email :</label>
             <input
               id="signup-email"
               type="email"
@@ -13,7 +13,7 @@
             />
           </div>
           <div class="form-block">
-            <label for="password">password :</label>
+            <label for="signup-password">password :</label>
             <input
               id="signup-password"
               type="password"
@@ -21,9 +21,11 @@
               formControlName="password"
             />
           </div>
-          <div *ngIf="firebaseErrorMessage != ''" class="error">
-            <span>{{firebaseErrorMessage}}</span>
-          </div>
+      @if(firebaseErrorMessage != ''){
+        <div class="error">
+          <span>{{firebaseErrorMessage}}</span>
+        </div>
+      }
 
           <button>Sign up</button>
     </form>
