--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,15 +5,22 @@ html {
 
   body {
     margin: 0;
-    background-color: #EAF5FDFF;
+    background-color: #226f9f;
     font-family: "Calibri", sans-serif;
     padding: 0;
     min-height: 100vh;
     height: 100%;
     overflow-x: hidden;
+    color: white;
+
+
 
     a {
       text-decoration: none;
     }
+  }
+
+  * {
+    border-color: #77d5ea !important;
   }
 }
