feat: UI adjustments

--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="message-component">
 <p>{{ (sender | async)?.username ?? (sender | async)?.email }}</p>
 <p>{{ message.content }}</p>
 </div>
