--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   padding: 4rem 2rem;
-  margin: auto;
-  max-width: 45rem;
+  width: calc(100% - 12.5rem);
+  max-width: 30rem;
 
   .dashboard-header {
     display: flex;
@@ -77,7 +77,11 @@
          }
       }
     }
-    .profile-read {
-    }
+  }
+}
+
+@media (max-width: 600px) {
+  .dashboard-component{
+    width: calc(100% - 10rem);
   }
 }
