--- a/src/app/components/new-post/new-post.component.scss
+++ b/src/app/components/new-post/new-post.component.scss
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   padding: 6rem 2rem;
-  margin: auto;
+  width: calc(100% - 12.5rem);
   max-width: 30rem;
-  .title {
-  }
+
   .new-post-form {
     display: flex;
     flex-direction: column;
@@ -51,5 +50,11 @@
         cursor: default;
       }
     }
+  }
+}
+
+@media (max-width: 600px) {
+  .new-post-component{
+    width: calc(100% - 10rem);
   }
 }
