--- a/src/app/components/post-detail/post-detail.component.scss
+++ b/src/app/components/post-detail/post-detail.component.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   padding: 6rem 2rem;
+  width: calc(100% - 12.5rem);
   max-width: 64rem;
-  margin: auto;
 
   .post-container {
     display: flex;
@@ -31,4 +31,9 @@
     }
   }
 
+}
+@media (max-width: 600px) {
+  .dashboard-component{
+    width: calc(100% - 10rem);
+  }
 }
