--- a/src/app/components/post-list/post-list.component.scss
+++ b/src/app/components/post-list/post-list.component.scss
@@ -2,9 +2,15 @@
   display: flex;
   flex-direction: column;
   padding: 4rem 2rem;
-  margin: auto;
-  max-width: 45rem;
+  width: calc(100% - 12.5rem);
+  max-width: 30rem;
   justify-content: center;
   overflow: scroll;
   scrollbar-width: none;
+}
+
+@media (max-width: 600px) {
+  .post-list-component{
+    width: calc(100% - 10rem);
+  }
 }
