feat: list user's contacts in chat page
- create contactService, model etc

--- a/src/app/components/message/message.component.scss
+++ b/src/app/components/message/message.component.scss
@@ -1,6 +1,6 @@
 .message-component{
     border-radius: 0.5rem;
-    background-color: #77d5ea;
+    background-color: #1f4b8c;
     padding: 1rem;
 
 }
