--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,7 @@
   >
     <div class="nav-links">
       <a routerLink="" class="nav-link"><mat-icon>home</mat-icon><span class="sidebar-link-text">Home</span></a>
+      <a routerLink="chat" class="nav-link"><mat-icon>chat_bubble</mat-icon><span class="sidebar-link-text">Chat</span></a>
     </div>
   </div>
 </nav>
