--- a/src/app/components/post-list/post-list.component.scss
+++ b/src/app/components/post-list/post-list.component.scss
@@ -7,6 +7,8 @@
   justify-content: center;
   overflow: scroll;
   scrollbar-width: none;
+  margin: auto;
+  gap:.5rem;
 }
 
 @media (max-width: 600px) {
