--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ html {
 
   body {
     margin: 0;
-    background-color: #226f9f;
+    background-color: #69bff6;
     font-family: "Calibri", sans-serif;
     padding: 0;
     min-height: 100vh;
