--- a/src/app/components/post-card/post-card.component.scss
+++ b/src/app/components/post-card/post-card.component.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   padding: 1rem;
   border-bottom: 0.1rem solid;
+  background-color: #10597c;
+  border-radius: .5rem;
 
   .image {
     height: 5rem;
