--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -8,6 +8,6 @@
 </div>
 </div>
 <div>
-<app-comment-list></app-comment-list>
+<app-comment-list [postID]="post.id"></app-comment-list>
 </div>
 </div>}
