--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 4rem 2rem;
   overflow: scroll;
+  scrollbar-width: none;
   width: calc(100% - 12.5rem);
   gap: 2rem;
 
@@ -19,8 +20,6 @@
     flex-direction: column;
     gap: 2rem;
 
-    .contact-search{}
-
     .list{
       display: flex;
       flex-direction: column;
@@ -28,7 +27,7 @@
 
       .contact-card{
         padding: 1rem;
-        background-color: cornflowerblue;
+        background-color: var(--main-bg-color);
         border-radius: .5rem;
       }
     }
