--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+:root{
+  --main-bg-color:  #15202b;
+}
+
 html {
   height: 100%;
   min-height: 100%;
@@ -5,7 +9,7 @@ html {
 
   body {
     margin: 0;
-    background-color: #69bff6;
+    background-color: var(--main-bg-color);
     font-family: "Calibri", sans-serif;
     padding: 0;
     min-height: 100vh;
