feat: rename app

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar-component">
   <div class="top-bar">
     <div class="navbar-brand">
-      <a routerLink="/">Chatter Angular</a>
+      <a routerLink="/">Kiwi Social</a>
     </div>
     <div class="top-bar-buttons">
       <button class="nav-link top-bar-button" type="button"><mat-icon>search</mat-icon></button>
