--- a/src/app/components/post-card/post-card.component.scss
+++ b/src/app/components/post-card/post-card.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   padding: 1rem;
   border-bottom: 0.1rem solid;
-  background-color: #10597c;
+  background-color: var(--main-card-bg-color);
   border-radius: .5rem;
 
   .image {
