--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 :root{
-  --main-bg-color:  #15202b;
+  --main-bg-color: #78aeec;
+  --main-navbar-bg-color: #1f4b8c;
+  --main-card-bg-color: #2e82b6;
 }
 
 html {
