--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -1,17 +1,55 @@
 .chat-component{
   display: flex;
   padding: 4rem 2rem;
-  overflow: scroll;
-  scrollbar-width: none;
   width: calc(100% - 12.5rem);
+  height: 80vh;
+  overflow: hidden;
   gap: 2rem;
 
   .chat-section{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+    margin: auto;
+
     .message-list {
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
-      width: 20rem;
+      width: 30rem;
+      overflow-y: scroll;
+      scrollbar-width: none;
+      height: 50vh;
+      margin: auto;
+      mask-image: linear-gradient(to bottom, black calc(100% - 48px), transparent 100%);
+    }
+
+
+
+    .message-creation{
+        padding: 1rem;
+        background-color: #637db1;
+      margin: auto;
+      border-radius: .5rem;
+
+      .message-form{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        width:30rem;
+
+        textarea{
+          border-radius: 0.5rem;
+          resize: none;
+        }
+
+        button{
+          background-color: #1f4b8c;
+          border-radius: .5rem;
+          width: fit-content;
+        }
+      }
+
     }
   }
 
@@ -19,6 +57,8 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    overflow-y: scroll;
+    scrollbar-width: none;
 
     .list{
       display: flex;
@@ -27,11 +67,9 @@
 
       .contact-card{
         padding: 1rem;
-        background-color: var(--main-bg-color);
+        background-color: var(--main-card-bg-color);
         border-radius: .5rem;
       }
     }
   }
-
-
 }
