--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -3,9 +3,7 @@
   position: fixed;
   z-index: 2;
   flex-direction: row;
-  border-bottom-color: transparent;
-  border-bottom-width:0.1rem;
-  border-bottom-style: solid;
+  background-color: var(--main-navbar-bg-color);
 
   .top-bar {
     display: flex;
@@ -57,12 +55,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    height: calc(100vh - 5.5rem);
+    height: calc(100vh - 5.4rem);
     padding: 2rem .5rem 0 .5rem;
     right: 0;
-    border-left: solid 0.1rem #5dadf4;
-    border-top: solid 0.1rem #5dadf4;
     bottom: 0;
+    background-color: var(--main-navbar-bg-color);
 
     .nav-links {
       display: flex;
